--- a/assets/sass/common/_common.scss
+++ b/assets/sass/common/_common.scss
@@ -43,9 +43,12 @@
   --bs-text-color5: #000000;
   --bs-text-color6: #F8F8F8;
   --bs-text-color7: #AAAAAA;
+  --bs-text-color8: #F6F6F6;
   --bs-bg-color1: #F8F8F8;
   --bs-bg-color2: #10171D;
   --bs-bg-color3: #18212A;
+  --bs-bg-color4: #666666;
+  --bs-bg-color5: #F6F6F6;
   --bs-border-color1: #E8E8E8;
   --bs-border-color2: #E6E6E6;
   --bs-border-color3: rgba(193, 193, 193, 0.20);
@@ -54,9 +57,11 @@
   --bs-border-color6: #666666;
   --bs-border-color7: #18212A;
   --bs-border-color8: #EFEFEF;
+  --bs-border-color9: #151515;
   --bs-rgba-color1: rgba(21, 21, 21, 0.91);
   --bs-white: #ffffff;
   --bs-white2: #FBFBFB;
+  --bs-white3: #FDFEFF;
   --bs-paragraph: #666666;
   --bs-body-font-size: 16px;
   --bs-body-font-weight: 400;
