--- a/assets/sass/components/_blog.scss
+++ b/assets/sass/components/_blog.scss
@@ -1,9 +1,10 @@
 /*=============================
 	05. Blog area start
 ===============================*/
-.blog-area {
+.blog-section {
 	.blog-container {
 		padding: 186px 0 158px 0;
+		max-width: 1280px !important;
 	}
 
 	.lines {
