--- a/assets/sass/components/_team.scss
+++ b/assets/sass/components/_team.scss
@@ -2,9 +2,10 @@
 	05. Projects area start
 ===============================*/
 
-.team-area {
+.team-section {
   .team-container {
     padding: 167px 0 166px 0;
+    max-width: 1280px !important;
   }
 
   .view-all-member {
