--- a/assets/sass/components/_text-slider.scss
+++ b/assets/sass/components/_text-slider.scss
@@ -1,7 +1,7 @@
 /*=============================
 	05. Text slider area start
 ===============================*/
-.text-slider-area {
+.text-slider-section {
 	background-color: var(--bs-bg-color2);
 	padding: 46px 0;
 
