--- a/assets/sass/components/_banner.scss
+++ b/assets/sass/components/_banner.scss
@@ -1,18 +1,16 @@
 /*=============================
 	05. Banner area one start
 ===============================*/
-.banner-area-one {
+.banner-section {
 	padding: 82px 0 61px 0;
 	background-color: var(--bs-white);
-	position: relative;
+
+	.banner-container {
+		max-width: 1280px !important;
+	}
 
 	.lines {
-		display: flex;
-		justify-content: space-between;
-		position: absolute;
 		top: -90px;
-		bottom: 0;
-		width: 100%;
 
 		span {
 			width: 1px;
@@ -22,9 +20,7 @@
 	}
 
 	.banner-text {
-		.link-btn {
-			display: flex;
-			justify-content: space-between;
+		.banner-btn {
 			gap: 12px;
 			max-width: 298px;
 			margin-left: 111px;
@@ -46,10 +42,6 @@
 			font-weight: 700;
 			line-height: 108px;
 
-			span {
-				display: block;
-			}
-
 			.line-1 {
 				padding-left: 97px;
 			}
@@ -62,11 +54,9 @@
 		p {
 			margin-top: 22px;
 			max-width: 556px;
-			margin-left: auto;
 		}
 
 		.banner-shape-line {
-			position: absolute;
 			bottom: 32px;
 			left: 99px;
 		}
@@ -76,7 +66,6 @@
 		margin-top: 72px;
 
 		.banner-img {
-			position: absolute;
 			top: 10px;
 			left: 20px;
 		}
