--- a/assets/sass/components/_brands.scss
+++ b/assets/sass/components/_brands.scss
@@ -1,17 +1,15 @@
 /*=============================
 	05. Brand slider area start
 ===============================*/
-.bland-slider {
+.bland-slider-section {
 	background-color: #FBFBFB;
 	padding: 53px 0;
-	overflow: hidden;
 	margin-top: 30px;
 	transform: rotate(-2deg);
 	border-bottom: 1px solid rgba(45, 51, 57, 0.15);
 
 	.slider-main {
 		.slider-item {
-			display: flex;
 			white-space: nowrap;
 			animation: scroll 20s linear infinite;
 			gap: 24px;
