--- a/assets/sass/components/_header.scss
+++ b/assets/sass/components/_header.scss
@@ -2,20 +2,22 @@
 	03. Header CSS Start
 ===============================*/
 
-.header-area .navbar-expand-xl .navbar-nav .nav-link {
+.header-section .navbar-expand-xl .navbar-nav .nav-link {
 	padding: 0;
 }
 
-.header-area {
+.header-section {
 	background-color: var(--bs-white);
 	position: relative;
 	z-index: 999;
-	width: 100%;
 	padding: 32px 0;
 	border-bottom: 1px solid var(--bs-border-color1);
 
+	.container {
+		max-width: 1280px !important;
+	}
+
 	.navbar {
-		padding: 0;
 
 		.navbar-nav {
 			.nav-item {
@@ -87,10 +89,8 @@
 		font-size: 16px;
 		font-weight: 600;
 		color: var(--bs-text-color2);
-		text-decoration: underline;
 	}
 }
-
 
 #header-fixed-height.active-height {
 	display: block;
