--- a/assets/sass/components/_video.scss
+++ b/assets/sass/components/_video.scss
@@ -1,31 +1,23 @@
 /*=============================
 	05. Play Video area start
 ===============================*/
-.play-video-one-area {
+.video-section {
 
 	.play {
-		top: 50%;
-		left: 50%;
-		transform: translate(-50%, -50%);
 		text-align: center;
 		transition: var(--bs-transition);
 
 		.vidplay {
 			span {
-				position: absolute;
-				top: 50%;
-				left: 50%;
-				transform: translate(-50%, -50%);
 				color: var(--bs-white);
 				font-size: 24px;
 				font-weight: 500;
 				line-height: 150%;
-				text-transform: uppercase;
 			}
 		}
 
 		&:hover {
-			transform: translate(-50%, -50%) scale(1.1);
+			transform: translate(-50%, -50%) scale(1.1) !important;
 		}
 	}
 }
