--- a/assets/sass/common/_common.scss
+++ b/assets/sass/common/_common.scss
@@ -58,6 +58,7 @@
   --bs-border-color7: #18212A;
   --bs-border-color8: #EFEFEF;
   --bs-border-color9: #151515;
+  --bs-border-color10: #DCDCDC;
   --bs-rgba-color1: rgba(21, 21, 21, 0.91);
   --bs-white: #ffffff;
   --bs-white2: #FBFBFB;
