--- a/assets/sass/common/_common.scss
+++ b/assets/sass/common/_common.scss
@@ -49,6 +49,7 @@
   --bs-bg-color3: #18212A;
   --bs-bg-color4: #666666;
   --bs-bg-color5: #F6F6F6;
+  --bs-bg-color6: #FAFAFA;
   --bs-border-color1: #E8E8E8;
   --bs-border-color2: #E6E6E6;
   --bs-border-color3: rgba(193, 193, 193, 0.20);
@@ -59,6 +60,7 @@
   --bs-border-color8: #EFEFEF;
   --bs-border-color9: #151515;
   --bs-border-color10: #DCDCDC;
+  --bs-border-color11: #2D3339;
   --bs-rgba-color1: rgba(21, 21, 21, 0.91);
   --bs-white: #ffffff;
   --bs-white2: #FBFBFB;
