--- a/assets/sass/components/_page-header.scss
+++ b/assets/sass/components/_page-header.scss
@@ -39,9 +39,14 @@
     margin-right: -830px;
     top: 121px;
   }
+  .pricing-title {
+    margin-right: -130px;
+    top: 121px;
+  }
 
   .des {
     max-width: 496px;
     margin-left: auto;
+    margin-top: -36px;
   }
 }
