--- a/assets/sass/style.scss
+++ b/assets/sass/style.scss
@@ -1,6 +1,7 @@
 @import "./common/common";
 // @import "./mixin/font";
 @import "./pages/home";
+@import "./pages/pricing.scss";
 @import "./pages/faq";
 @import "./pages/contact";
 @import "./pages/error404";
