--- a/assets/sass/pages/_faq.scss
+++ b/assets/sass/pages/_faq.scss
@@ -7,7 +7,8 @@
 
   .faq-body {
     margin: 0 1px;
-    margin-right: 90px;
+    margin-right: 88px;
+    ;
 
     .accordion-button:focus {
       box-shadow: none;
@@ -30,8 +31,8 @@
       font-size: 20px;
       font-weight: 600;
       line-height: 146%;
-      padding-bottom: 23px;
-      padding-top: 24px;
+      padding-bottom: 22px;
+      padding-top: 23px;
       padding-right: 25px;
     }
 
@@ -66,6 +67,14 @@
 
     .accordion-item:last-of-type {
       border-radius: 0 !important;
+    }
+
+    .accordion-item:first-of-type {
+      border-radius: 0 !important;
+
+      .accordion-button {
+        border-radius: 0 !important;
+      }
     }
   }
 }
