--- a/assets/sass/pages/_error404.scss
+++ b/assets/sass/pages/_error404.scss
@@ -39,6 +39,7 @@
       height: 225px;
       background: var(--bs-primary);
       padding: 70px 36px 58px;
+      border: 0;
 
       .icon {
         margin-top: 13px;
