--- a/assets/sass/style.scss
+++ b/assets/sass/style.scss
@@ -1,6 +1,8 @@
 @import "./common/common";
 // @import "./mixin/font";
 @import "./pages/home";
+@import "./pages/career";
+@import "./pages/career-details";
 @import "./pages/pricing.scss";
 @import "./pages/faq";
 @import "./pages/contact";
