--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -45,6 +45,7 @@
   --bs-bg-color4: #666666;
   --bs-bg-color5: #F6F6F6;
   --bs-bg-color6: #FAFAFA;
+  --bs-bg-color7: #FCFCFC;
   --bs-border-color1: #E8E8E8;
   --bs-border-color2: #E6E6E6;
   --bs-border-color3: rgba(193, 193, 193, 0.20);
@@ -56,6 +57,7 @@
   --bs-border-color9: #151515;
   --bs-border-color10: #DCDCDC;
   --bs-border-color11: #2D3339;
+  --bs-border-color12: #E9E7E7;
   --bs-rgba-color1: rgba(21, 21, 21, 0.91);
   --bs-white: #ffffff;
   --bs-white2: #FBFBFB;
@@ -154,6 +156,7 @@ p {
 
 .row {
   --bs-gutter-x: 30px;
+  --bs-gutter-y: 30px;
 }
 
 /* section title */
@@ -200,6 +203,24 @@ p {
       -ms-flex-align: center;
           align-items: center;
   padding: 20px;
+}
+
+.view-all-btn-primary {
+  background-color: var(--bs-primary);
+  border: 0;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+}
+.view-all-btn-primary img {
+  margin-top: 7px;
 }
 
 .view-all-btn2 {
@@ -1275,13 +1296,15 @@ p {
   line-height: 160%;
 }
 
+.page-header {
+  padding-top: 144px;
+}
 .page-header .page-sub-title {
   font-family: var(--bs-font-secondary);
   font-size: 96px;
   font-weight: 600;
   line-height: 103%;
   max-width: 675px;
-  padding-top: 167px;
 }
 .page-header .page-sub-title .page-header-shape {
   bottom: -34px;
@@ -1316,8 +1339,22 @@ p {
 }
 .page-header .des {
   max-width: 496px;
-  margin-left: auto;
-  margin-top: -36px;
+  margin-bottom: -40px;
+}
+.page-header .view-all-btn-primary {
+  padding: 30px;
+  color: var(--bs-text-color1);
+  font-family: var(--bs-font-secondary);
+  font-size: 18px;
+  font-weight: 700;
+  line-height: 125%;
+  text-transform: uppercase;
+  width: 225px;
+  height: 225px;
+  padding-top: 45px;
+}
+.page-header .view-all-btn-primary img {
+  margin-top: 13px;
 }
 
 .subscribe-now-section {
@@ -1359,9 +1396,164 @@ p {
   top: -12px;
 }
 
+.inner-page-lines {
+  max-width: 1200px;
+  left: 50%;
+  -webkit-transform: translateX(-50%);
+          transform: translateX(-50%);
+}
 .inner-page-lines span {
   width: 1px;
   background-color: var(--bs-border-color8);
+}
+
+.career-details-section {
+  padding: 109px 0;
+}
+
+.career-banner-section {
+  padding-top: 68px;
+}
+
+.career-details-section ul {
+  gap: 54px;
+}
+.career-details-section ul li {
+  color: var(--bs-text-color1);
+  font-size: 32px;
+  font-weight: 500;
+  line-height: 125%;
+}
+.career-details-section ul li::before {
+  position: absolute;
+  bottom: 9px;
+  right: -30px;
+  background-color: var(--bs-bg-color2);
+  width: 5px;
+  height: 5px;
+  content: "";
+}
+.career-details-section ul li:last-child::before {
+  display: none;
+}
+.career-details-section p {
+  max-width: 979px;
+  margin: 0 auto;
+  margin-top: 27px;
+  color: var(--bs-paragraph);
+  font-size: 24px;
+  font-weight: 400;
+  line-height: 160%;
+}
+
+.career-inner-image-section {
+  padding-bottom: 90px;
+}
+
+.vacancy-section {
+  background-color: var(--bs-bg-color7);
+  padding: 132px 0 183px 0;
+}
+.vacancy-section .section-title-block {
+  margin-bottom: 43px;
+}
+.vacancy-section .vacancy-item {
+  border-top: 1px solid var(--bs-border-color12);
+  padding: 59px 90px 57px 103px;
+}
+.vacancy-section .vacancy-item .number {
+  color: var(--bs-paragraph);
+  font-size: 24px;
+  font-weight: 600;
+  line-height: normal;
+  max-width: 10%;
+  width: 100%;
+}
+.vacancy-section .vacancy-item .subject {
+  max-width: 50%;
+  width: 100%;
+}
+.vacancy-section .vacancy-item .subject h4 {
+  color: var(--bs-text-color1);
+  font-family: var(--bs-font-secondary);
+  font-size: 32px;
+  font-weight: 600;
+  line-height: 132%;
+}
+.vacancy-section .vacancy-item .position {
+  max-width: 30%;
+  width: 100%;
+}
+.vacancy-section .vacancy-item .position p {
+  color: var(--bs-paragraph);
+  font-size: 18px;
+  font-weight: 400;
+  line-height: 160%;
+}
+.vacancy-section .vacancy-item .view {
+  max-width: 149px;
+  width: 100%;
+  text-align: center;
+}
+.vacancy-section .vacancy-item .view-all-btn-primary {
+  top: -63px;
+  padding-top: 45px;
+  visibility: hidden;
+  opacity: 0;
+  -webkit-transition: var(--bs-transition);
+  transition: var(--bs-transition);
+  -webkit-transform: scale(0);
+          transform: scale(0);
+}
+.vacancy-section .vacancy-item:last-child {
+  border-bottom: 1px solid var(--bs-border-color12);
+}
+.vacancy-section .vacancy-item:hover .view-all-btn-primary {
+  visibility: visible;
+  opacity: 1;
+  -webkit-transform: scale(1);
+          transform: scale(1);
+}
+
+.benifits-section {
+  padding: 90px 0 124px 0;
+}
+.benifits-section .benifits-main .benifits-item {
+  width: 212px;
+  height: 213px;
+  border-radius: 62px;
+  border: 2px solid #D4D4D4;
+  padding: 40px;
+}
+.benifits-section .benifits-main .benifits-item h4 {
+  color: var(--bs-text-color1);
+  font-family: var(--bs-font-secondary);
+  font-size: 18px;
+  font-style: normal;
+  font-weight: 500;
+  line-height: normal;
+}
+.benifits-section .benifits-main .benifits-item:nth-child(2), .benifits-section .benifits-main .benifits-item:nth-child(5) {
+  margin: 0 -17px;
+}
+.benifits-section .benifits-info {
+  margin-left: -30px;
+}
+.benifits-section .benifits-info .title {
+  color: var(--bs-text-color1);
+  font-family: var(--bs-font-secondary);
+  font-size: 40px;
+  font-weight: 600;
+  line-height: 130%;
+  margin-bottom: 46px;
+  padding-right: 200px;
+}
+.benifits-section .benifits-info p {
+  color: var(--bs-text-color1);
+  font-size: 18px;
+  font-style: normal;
+  font-weight: 400;
+  line-height: 160%;
 }
 
 .pricing-section {
@@ -1631,6 +1823,7 @@ p {
   height: 225px;
   background: var(--bs-primary);
   padding: 70px 36px 58px;
+  border: 0;
 }
 .error-section .back-top-home .back-to-home-btn .icon {
   margin-top: 13px;
