--- a/assets/sass/common/_common.scss
+++ b/assets/sass/common/_common.scss
@@ -50,6 +50,7 @@
   --bs-bg-color4: #666666;
   --bs-bg-color5: #F6F6F6;
   --bs-bg-color6: #FAFAFA;
+  --bs-bg-color7: #FCFCFC;
   --bs-border-color1: #E8E8E8;
   --bs-border-color2: #E6E6E6;
   --bs-border-color3: rgba(193, 193, 193, 0.20);
@@ -61,6 +62,7 @@
   --bs-border-color9: #151515;
   --bs-border-color10: #DCDCDC;
   --bs-border-color11: #2D3339;
+  --bs-border-color12: #E9E7E7;
   --bs-rgba-color1: rgba(21, 21, 21, 0.91);
   --bs-white: #ffffff;
   --bs-white2: #FBFBFB;
@@ -162,6 +164,7 @@ p {
 
 .row {
   --bs-gutter-x: 30px;
+  --bs-gutter-y: 30px;
 }
 
 /* section title */
@@ -202,6 +205,17 @@ p {
   justify-content: center;
   align-items: center;
   padding: 20px;
+}
+
+.view-all-btn-primary {
+  background-color: var(--bs-primary);
+  border: 0;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  img{
+    margin-top: 7px;
+  }
 }
 
 .view-all-btn2 {
