--- a/assets/sass/pages/_contact.scss
+++ b/assets/sass/pages/_contact.scss
@@ -86,6 +86,23 @@
 }
 
 .input-group {
+  .form-label {
+    color: var(--bs-paragraph);
+    font-size: 18px;
+    font-weight: 400;
+    line-height: 160%;
+    border: 0;
+    border-bottom: 1px solid var(--bs-border-color5);
+    padding-bottom: 12px;
+    width: 100%;
+    cursor: pointer;
+    transition: var(--bs-transition);
+
+    &:hover {
+      border-color: var(--bs-border-color7);
+    }
+  }
+
   .form-control {
     color: var(--bs-paragraph);
     font-size: 18px;
@@ -94,7 +111,9 @@
     border: 0;
     border-bottom: 1px solid var(--bs-border-color5);
     padding-bottom: 12px;
-    &:focus{
+    padding-top: 0;
+
+    &:focus {
       border-color: var(--bs-border-color7);
     }
 
@@ -106,7 +125,8 @@
   .form-textarea {
     min-height: 122px;
     resize: none;
-    &:focus{
+
+    &:focus {
       border-color: var(--bs-border-color7);
     }
   }
