--- a/assets/sass/common/_common.scss
+++ b/assets/sass/common/_common.scss
@@ -47,6 +47,7 @@
   --bs-text-color9: #989898;
   --bs-text-color10: #555555;
   --bs-text-color11: #282828;
+  --bs-text-color12: #E1E1E1;
   --bs-bg-color1: #F8F8F8;
   --bs-bg-color2: #10171D;
   --bs-bg-color3: #18212A;
