--- a/assets/sass/style.scss
+++ b/assets/sass/style.scss
@@ -10,6 +10,7 @@
 @import "./pages/faq";
 @import "./pages/contact";
 @import "./pages/error404";
+@import "./pages/blog";
 @import "./components/page-header";
 @import "./components/subscribe-now";
 @import "./components/lines";
