--- a/assets/sass/components/_footer.scss
+++ b/assets/sass/components/_footer.scss
@@ -134,6 +134,93 @@
   }
 }
 
+.footer-section-four {
+  background: var(--bs-bg-color2);
+  padding: 114px 0 74px 0;
+
+  .footer-about {
+    max-width: 270px;
+
+    .logo {
+      margin-bottom: 53px;
+    }
+
+    p {
+      color: var(--bs-text-color12);
+      font-size: 18px;
+      font-style: normal;
+      font-weight: 400;
+      line-height: 160%;
+    }
+
+    .footer-social-icon2 {
+      margin-top: 37px;
+
+      a {
+        width: 48px;
+        height: 48px;
+        background-color: var(--bs-white);
+        display: inline-flex;
+        justify-content: center;
+        align-items: center;
+        border-radius: 50%;
+        margin-right: 8px;
+      }
+    }
+  }
+
+  .ms-60 {
+    margin-left: 60px;
+  }
+
+  .footer-widget {
+    .footer-title {
+      margin-bottom: 36px;
+    }
+
+    ul {
+      li {
+        a {
+          color: var(--bs-text-color12);
+        }
+      }
+
+      li+li {
+        margin-top: 4px;
+      }
+    }
+  }
+
+  .footer-widget.address {
+    p {
+      color: var(--bs-text-color12);
+    }
+
+    .contact-info {
+      margin-top: 30px;
+      a {
+        font-size: 18px;
+        font-weight: 400;
+        line-height: 160%;
+        color: var(--bs-text-color12);
+      }
+    }
+  }
+
+  .footer-copyright {
+    border-top: 1px solid #808080;
+    margin-top: 57px;
+    padding-top: 22px;
+
+    p {
+      color: var(--bs-text-color7);
+      font-size: 18px;
+      font-weight: 400;
+      line-height: 160%;
+    }
+  }
+}
+
 .footer-widget {
   .footer-title {
     color: var(--bs-white);
